samples/_failures_safe/1761196783_0a581e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_40604f32.c: In function ‘main’:
./samples/SAFE/__tmp_40604f32.c:151:9: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  151 |         char input
      |         ^~~~
./samples/SAFE/__tmp_40604f32.c:151:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_40604f32.c:151:9: error: expected declaration or statement at end of input
